css/styles.css
/* ... */
[data-theme="dark"] {
  /* ==== BACKGROUNDS ==== */
  --main-bg: hsl(var(--h), 10%, 10%);
  --surface-bg: hsl(var(--h), 10%, 15%);
  --surface-border: hsl(var(--h), 10%, 25%);

  /* ==== TEXT ==== */
  --primary-dark: hsl(var(--h), var(--s), 85%);
  --primary: hsl(var(--h), var(--s), 70%);

  --color-text-muted: hsl(var(--h), 10%, 65%);

  --on-accent: hsl(var(--h), var(--s), 10%);

  /* ==== SHADOW ==== */
  --shadow-color: hsla(var(--shadow-h), var(--shadow-s), 2%, 0.5);

}



/* ============================================================================
                               BASE
=============================================================================*/

@layer base {

  *, 
::before,
::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

  html {
  font-size: var(--font-base);
  scroll-behavior: smooth;
  scroll-padding-top: var(--space-md);
}

body {
  display: grid; /* Forces every elements of the page to respect viewport*/

  background-color: var(--color-bg);
  color: var(--color-text-main);
  
  font-family: "Outfit", sans-serif;
  line-height: 1.5;
  font-weight: 400;

  overflow-x: hidden;
  min-height: 100vh;

  -webkit-font-smoothing: antialiased;
}

section {
  scroll-margin-top: var(--space-md);
}

img,
picture,
svg {
  max-width: 100%;
  display: block;
}

h1, 
h2, 
h3, 
h4, 
h5, 
h6 {
  line-height: 1.2;
  color: var(--color-text-primary);
  font-weight: 700;

  margin: 0;
}

h1 { font-size: var(--text-xl); }
h2 { font-size: var(--text-lg); }
h3 { font-size: var(--text-md); }

p {
  font-size: var(--text-base);
  color: var(--color-text-main);
  margin-bottom: var(--space-md);
  max-width: 65ch;
}

small { font-size: var(--text-sm); }

ul,
ol { list-style: none;}

button {
  background: none;
  border: none;
  font: inherit;
  cursor: pointer;
  color: inherit;
}

a {
  color: inherit;
  text-decoration: none;
  transition: var(--tr-color);
}

::selection {
  background-color: var(--color-primary);
  color: var(--color-on-accent);
}

}

/* ============================================================================
                                 LAYOUT
=============================================================================*/


@layer layout {
  .section {
    padding-block: var(--space-xl);
  }

  .container {
    width: 100%;
    max-width: var(--container-max-width);
    margin-inline: auto;
    padding-inline: var(--container-padding);
  }

  .header {
    position: sticky;
    top: 0;
    z-index: var(--sticky-header-z);
    height: var(--header-height, 2.5rem);

    background-color: hsla(var(--h), 10%, 100%, 0.8);
    backdrop-filter: blur(12px);
    border-bottom: 1px solid var(--surface-border);

    display: flex;
    align-items: center;
  }

  .header__inner {
    max-width: 1200px;
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  .section:not(:first-child) {
    opacity: 0;
    transform: translateY(40px);

    transition: var(--tr-opacity), var(--tr-transform);

    will-change: opacity, transform;
  }

  .section.visible {
    opacity: 1;
    transform: translateY(0);
  }

  .hero {
    min-height: 100vh;
    display: grid;
    place-items: center;
  }

  .hero__inner {
    display: grid; 
    gap: var(--space-lg);
    text-align: center;
  }

  .skills__grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(var(--size-xs), 1fr));
    gap: var(--space-lg);
  }

  .flex-center {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    gap: var(--space-md);
  }

  .projects__grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
    gap: var(--space-lg);
  }

  .project-card {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: var(--space-md);
  }

  .project-card__content {
    display: flex;
    flex-direction: column;
    gap: var(--space-md);

    flex: 1;
  }
}
/* ... */

